# todo_pixy

./: .gitignore  LICENSE  README.md  proc.sh  pyproject.toml
src/todo_pixy/: app.py  model.py
src/todo_pixy/static/: package-lock.json
src/todo_pixy/static/js/: app.js
src/todo_pixy/templates/: add_todo.pix  index.pix
