[tool.poetry]
name = "todo-pixy"
version = "0.1.0"
description = ""
authors = ["Pradeep Roark <pradeep.roark@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_pixy", from = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pixyverse-render-html = {path = "../render_html"}
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
mypy = {version = "^1.10.0", optional = true}
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
